@@ -1,8 +1,13 @@
+2008-12-20 fix the dpi-dependent offset of Shadow. - JJL
+
+2008-12-20 fix the hatch bug in the pdf backend. minor update
+           in docs and  example - JJL
+
 2008-12-19 Add axes_locator attribute in Axes. Two examples are added.
            - JJL
 
-2008-12-19 Update Axes.legend documnetation. /api/api_changes.rst is also 
-           updated to describe chages in keyword parameters. 
+2008-12-19 Update Axes.legend documnetation. /api/api_changes.rst is also
+           updated to describe chages in keyword parameters.
            Issue a warning if old keyword parameters are used. - JJL
 
 2008-12-18 add new arrow style, a line + filled triangles. -JJL
